--- a/packages/framework/src/Resources/views/Admin/Inline/Menu/panel.html.twig
+++ b/packages/framework/src/Resources/views/Admin/Inline/Menu/panel.html.twig
@@ -1,3 +1,5 @@
+{{ knp_menu_render('admin_main') }}
+
 <nav class="panel">
     <ul class="side-menu js-panel-menu">
         {% for item in visibleItems %}
