--- a/packages/framework/src/Resources/views/Admin/Inline/Breadcrumb/breadcrumb.html.twig
+++ b/packages/framework/src/Resources/views/Admin/Inline/Breadcrumb/breadcrumb.html.twig
@@ -1,13 +1,12 @@
 <div class="in-breadcrumb">
-    {% for item in items %}
-        {% if loop.first %}
+    {% for item in knp_menu_get_breadcrumbs_array(knp_menu_get_current_item('admin_main')) %}
+        {% if loop.first and item.label == 'root' %}
             <a href="{{ url('admin_default_dashboard') }}" class="in-breadcrumb__item in-breadcrumb__item--home">
                 <i class="svg svg-house"></i>
             </a>
             <span class="in-breadcrumb__separator"> > </span>
-        {% endif %}
-        {% if loop.last %}
-            <span class="in-breadcrumb__item in-breadcrumb__item--actual">{{ item.label }}</span>
+        {% elseif loop.last %}
+            <span class="in-breadcrumb__item in-breadcrumb__item--actual">{{ breadcrumb.lastItemOverridden ? breadcrumb.lastItemLabel : item.label }}</span>
         {% else %}
             <span class="in-breadcrumb__item">{{ item.label }}</span>
             <span class="in-breadcrumb__separator"> > </span>
