--- a/packages/framework/src/Resources/views/Admin/Inline/Breadcrumb/breadcrumb.html.twig
+++ b/packages/framework/src/Resources/views/Admin/Inline/Breadcrumb/breadcrumb.html.twig
@@ -6,7 +6,7 @@
             </a>
             <span class="in-breadcrumb__separator"> > </span>
         {% elseif loop.last %}
-            <span class="in-breadcrumb__item in-breadcrumb__item--actual">{{ breadcrumb.lastItemOverridden ? breadcrumb.lastItemLabel : item.label }}</span>
+            <span class="in-breadcrumb__item in-breadcrumb__item--actual">{{ breadcrumbOverrider.lastItemOverridden ? breadcrumbOverrider.lastItemLabel : item.label }}</span>
         {% else %}
             <span class="in-breadcrumb__item">{{ item.label }}</span>
             <span class="in-breadcrumb__separator"> > </span>
